--- a/docs/boba/styles.css
+++ b/docs/boba/styles.css
@@ -4,11 +4,11 @@ body {
     font-family: "Fraunces", monospace;
     background: #C76B0F;
     font-size: 1.5em;
+    background-image: linear-gradient(to bottom right, #d97511, #964d03);
 }
 #header {
     padding: 1em;
-    background-color: #C76B0F;
-    background-image: linear-gradient(to bottom right, #C76B0F, #A25404);
+    /*background-color: #C76B0F;*/
     display:flex;
     justify-content: center;
     align-items: center;
@@ -20,7 +20,8 @@ body {
 }
 
 #footer {
-    padding: 1em;
+    margin-top: 2rem;
+    padding: 1rem;
     text-align: center;
     background: #603101;
 }
@@ -56,7 +57,7 @@ a {
 
 .container {
     padding: 1em;
-    background-image: linear-gradient(to bottom right, #C76B0F, #A25404);
+    /*background-image: linear-gradient(to bottom right, #C76B0F, #A25404);*/
     /* max-width: 24em; */
 
 }
@@ -113,7 +114,7 @@ a {
     border-radius: 1em;
 }
 .spacer {
-    margin: 1em;
+    margin: 1rem;
 }
 .banner {
     position: absolute;
